@@ -1,5 +1,11 @@
 2007-03-26  Ross Burton  <ross@burtonini.com>
 
+	* src/sj-extracting.c:
+	Display a better message after CD extraction (thanks Adam
+	Petaccia, #346067).
+
+2007-03-26  Ross Burton  <ross@burtonini.com>
+
 	* libjuicer/sj-metadata-musicbrainz.c:
 	Detect albums from FreeDB better (thanks David Mandelberg, #353181).
 
